// Terminal streaming protocol definitions
// This is the single source of truth for the binary WebSocket protocol.

syntax = "proto3";

package terminal;

// RGB color (0-255 per channel)
message Color {
  uint32 r = 1;
  uint32 g = 2;
  uint32 b = 3;
}

// Terminal theme with 16 ANSI colors
message ThemeInfo {
  string name = 1;
  Color background = 2;
  Color foreground = 3;
  repeated Color normal = 4;   // 8 colors (indices 0-7)
  repeated Color bright = 5;   // 8 colors (indices 8-15)
}

// Event types for subscription
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_OUTPUT = 1;
  EVENT_TYPE_CURSOR = 2;
  EVENT_TYPE_BELL = 3;
  EVENT_TYPE_TITLE = 4;
  EVENT_TYPE_RESIZE = 5;
  EVENT_TYPE_CWD = 6;
  EVENT_TYPE_TRIGGER = 7;
  EVENT_TYPE_ACTION = 8;
  EVENT_TYPE_MODE = 9;
  EVENT_TYPE_GRAPHICS = 10;
  EVENT_TYPE_HYPERLINK = 11;
}

// =============================================================================
// Server -> Client Messages
// =============================================================================

message ServerMessage {
  oneof message {
    Output output = 1;
    Resize resize = 2;
    Title title = 3;
    Connected connected = 4;
    Refresh refresh = 5;
    CursorPosition cursor = 6;
    Bell bell = 7;
    Error error = 8;
    Shutdown shutdown = 9;
    Pong pong = 10;
    CwdChanged cwd_changed = 11;
    TriggerMatched trigger_matched = 12;
    ActionNotify action_notify = 13;
    ActionMarkLine action_mark_line = 14;
    ModeChanged mode_changed = 15;
    GraphicsAdded graphics_added = 16;
    HyperlinkAdded hyperlink_added = 17;
  }
}

// Terminal output data (very high frequency)
message Output {
  bytes data = 1;                    // UTF-8 encoded terminal output with ANSI codes
  optional uint64 timestamp = 2;     // Unix epoch milliseconds
}

// Terminal resize notification
message Resize {
  uint32 cols = 1;
  uint32 rows = 2;
}

// Terminal title change
message Title {
  string title = 1;
}

// Initial connection handshake
message Connected {
  uint32 cols = 1;
  uint32 rows = 2;
  optional bytes initial_screen = 3;  // ANSI styled screen content
  string session_id = 4;
  optional ThemeInfo theme = 5;
  optional string badge = 6;              // Current badge text
  optional float faint_text_alpha = 7;    // Dim text alpha (0.0-1.0)
  optional string cwd = 8;               // Current working directory
  optional uint32 modify_other_keys = 9;  // modifyOtherKeys mode (0-2)
  optional string client_id = 10;         // Unique client identifier
  optional bool readonly = 11;            // Whether this connection is read-only
}

// Full screen refresh response
message Refresh {
  uint32 cols = 1;
  uint32 rows = 2;
  bytes screen_content = 3;           // ANSI styled screen content
}

// Cursor position update
message CursorPosition {
  uint32 col = 1;
  uint32 row = 2;
  bool visible = 3;
}

// Bell/alert event
message Bell {}

// CWD change notification (OSC 7)
message CwdChanged {
  optional string old_cwd = 1;
  string new_cwd = 2;
  optional string hostname = 3;
  optional string username = 4;
  optional uint64 timestamp = 5;
}

// Trigger pattern matched
message TriggerMatched {
  uint64 trigger_id = 1;
  uint32 row = 2;
  uint32 col = 3;
  uint32 end_col = 4;
  string text = 5;
  repeated string captures = 6;
  uint64 timestamp = 7;
}

// Trigger action result: notification
message ActionNotify {
  uint64 trigger_id = 1;
  string title = 2;
  string message = 3;
}

// Trigger action result: mark/bookmark a line
message ActionMarkLine {
  uint64 trigger_id = 1;
  uint32 row = 2;
  optional string label = 3;
  optional Color color = 4;
}

// Error notification
message Error {
  string message = 1;
  optional string code = 2;
}

// Server shutdown notification
message Shutdown {
  string reason = 1;
}

// Keepalive pong response
message Pong {}

// Terminal mode changed (cursor visibility, mouse tracking, etc.)
message ModeChanged {
  string mode = 1;    // Mode name (e.g., "cursor_visible", "mouse_tracking")
  bool enabled = 2;   // Whether the mode is enabled
}

// Graphics/image added to terminal (Sixel, iTerm2, Kitty)
message GraphicsAdded {
  uint32 row = 1;                   // Row where graphics were added
  optional string format = 2;       // Graphics format ("sixel", "iterm2", "kitty")
}

// Hyperlink added (OSC 8)
message HyperlinkAdded {
  string url = 1;                   // The URL of the hyperlink
  uint32 row = 2;                   // Row where the hyperlink appears
  uint32 col = 3;                   // Column where hyperlink starts
  optional string id = 4;           // Optional hyperlink ID from OSC 8
}

// =============================================================================
// Client -> Server Messages
// =============================================================================

message ClientMessage {
  oneof message {
    Input input = 1;
    ClientResize resize = 2;
    Ping ping = 3;
    RequestRefresh refresh = 4;
    Subscribe subscribe = 5;
  }
}

// Keyboard input from client
message Input {
  bytes data = 1;  // UTF-8 encoded input (may include escape sequences)
}

// Client requests terminal resize
message ClientResize {
  uint32 cols = 1;
  uint32 rows = 2;
}

// Keepalive ping request
message Ping {}

// Client requests full screen refresh
message RequestRefresh {}

// Client subscribes to specific event types
message Subscribe {
  repeated EventType events = 1;
}
